@@ -1,5 +1,9 @@
+[B]Version 1.1.0 - 7 Jan 2017[/B]
+- Tamilgun scraper improvements
+
 [B]Version 1.0.9 - 6 Jan 2017[/B]
-- Abroad India Live TV improvements (Thanks to Abroad India for providing better access)
+- Abroad India Live TV improvements
+ (Thanks to Abroad India for providing better access)
 - Add MalayalamSerials Catchup TV
 
 [B]Version 1.0.8 - 2 Jan 2017[/B]
